# bishe

./: .gitignore  1-本科生毕业论文任务书-2022013223-张仕卓.doc  DATA_PROCESSING_GUIDE.md  EMBEDDED_CPP_IDENTIFIER_VERIFICATION.md  FINAL_TRANSLATION_SUMMARY.md  IDENTIFIER_TRANSLATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  PROJECT_SETUP_SUMMARY.md  QUICKSTART.md  README.md  RENAME_ANALYSIS_REPORT.md  TASK_COMPLETION_FINAL.md  TASK_COMPLETION_REPORT.md  TASK_COMPLETION_SUMMARY.md  TEST_FILES_VERIFICATION_REPORT.md  TRACKING_TRANSLATION_SUMMARY.md  TRANSLATION_COMPLETION_REPORT.md  TRANSLATION_REPORT.md  TRANSLATION_STATUS.md  TRANSLATION_SUMMARY.md  TRANSLATION_VERIFICATION.md  VERIFICATION_COMPLETE.md  gen_thesis.py  inference_stats.txt  main.py  p2v.py  requirements.txt  verify_tracking.py  weitiao.py  使用指南.md  执行手册.md  项目说明.md
.github/: copilot-instructions.md
.github/skills/external-rknn-rtsp-detect-reference/: SKILL.md
.github/skills/external-rknn-rtsp-detect-reference/assets/: template.json
.github/skills/external-rknn-rtsp-detect-reference/references/: api-docs.md
.github/skills/external-rknn-rtsp-detect-reference/scripts/: helper.py
.github/skills/rv1126b-20ms-deploy-flow/: SKILL.md
.github/skills/rv1126b-20ms-deploy-flow/assets/: report-template.md  template.json
.github/skills/rv1126b-20ms-deploy-flow/references/: api-docs.md  optimization-matrix.md
.github/skills/rv1126b-20ms-deploy-flow/scripts/: helper.py  parse_latency.py
.github/skills/rv1126b-pc-board-gap-triage/: SKILL.md
.github/skills/rv1126b-pc-board-gap-triage/assets/: diagnosis-template.md  template.json  triage-checklist.md
.github/skills/rv1126b-pc-board-gap-triage/references/: api-docs.md
.github/skills/rv1126b-pc-board-gap-triage/scripts/: helper.py
.github/skills/thesis-blind-review-guard/: SKILL.md
.github/skills/thesis-blind-review-guard/assets/: blind-review-checklist.md  template.json
.github/skills/thesis-blind-review-guard/references/: api-docs.md
.github/skills/thesis-blind-review-guard/scripts/: helper.py
.github/skills/thesis-chapter-drafter/: SKILL.md
.github/skills/thesis-chapter-drafter/assets/: chapter-writing-prompts.md  template.json
.github/skills/thesis-chapter-drafter/references/: api-docs.md
.github/skills/thesis-chapter-drafter/scripts/: helper.py
.github/skills/thesis-outline-and-compliance/: SKILL.md
10：本科毕业论文样例及撰写规范/: 1-本科生毕业论文排版样例-含章标记版.docx  2-本科毕业论文参考文献著录规则.doc  3-本科毕业论文英文参考文献翻译封面及排版要求.doc  信息工程学院本科毕业论文撰写规范及打印排版要求.doc  论文模板.docx  论文模板2.docx
configs/: dataset.yaml  deploy_config.yaml  eval_detection.yaml  plot_eval_summary.yaml  plot_tracking_comparison.yaml  tracking_config.yaml  train_config.yaml
configs/ablation/: hyp_eiou_focal.yaml  hyp_eiou_only.yaml  hyp_focal_only.yaml  hyp_siou_only.yaml  train_profile_controlled.yaml  train_profile_optimal.yaml
data/: README.md
data/hyps/: hyp.finetune.yaml
deploy/rv1126b_yolov5/: CMakeLists.txt  README.md  build_rv1126b.sh  calibration_dataset.txt
deploy/rv1126b_yolov5/python/: convert_yolov5_to_rknn.py
deploy/rv1126b_yolov5/src/: main.cc  main_video.cc  postprocess.cc  postprocess.hpp  rknn_detector.cc  rknn_detector.hpp
docs/: 9-张仕卓-2022013223-张建锋.pptx  cpp重构规划.md  thesis_outline.md  thesis_v1.md  中期检查评价表填写草稿.md  完整实施指南.md  开题报告v5-2022013223-张仕卓.docx  板端部署最小清单.md  毕业设计简单实施方案-张仕卓.docx  脚本执行文档.md  部署指南.md  项目说明.md
docs/cpp重构/: 01-总览与边界.md  02-工程目录与模块职责.md  03-三周计划.md  04-C++知识地图.md  05-每周每天代码任务清单.md
docs/thesis_versions/: session_handoff.md  v1_full.md  v2_evidence.md  v3_argumentation.md  v4_compliance.md  v5_final.md
embedded/: CMakeLists.txt  embedded  toolchain.cmake  部署说明.md
embedded/configs/: pipeline_config.yaml
embedded/include/: detector.h  pipeline.h  tracker.h
embedded/src/: detector.cpp  main.cpp  pipeline.cpp  tracker.cpp
gui/: deploy_gui.py  deploy_gui.py.bak
model/rknn/: README.md
model/tracking/deepsort/: config.yaml
model/yolov5/configs/: yolov5s_EloU.yaml  yolov5s_attention.yaml  yolov5s_base.yaml  yolov5s_coordatt.yaml  yolov5s_ghost_attention.yaml  yolov5s_lightweight.yaml  yolov5s_loss_focal.yaml  yolov5s_shuffle.yaml  yolov5s_shuffle_coordatt.yaml
model/yolov5/modules/: __init__.py  attention.py  lightweight.py
models/tracking/bytetrack/: config.yaml
models/tracking/centertrack/: config.yaml
models/tracking/deepsort/: config.yaml
models/yolov5/: losses.py  yolov5_loss_adapter.yaml  yolov5s_attention.yaml  yolov5s_infrared.yaml  yolov5s_lightweight.yaml
models/yolov5/backbone/: __init__.py  lightweight.py
models/yolov5/modules/: __init__.py  attention.py
scripts/archived/: README.md  download_dataset.py  prepare_kaist.py
scripts/data/: download_dataset.py  download_dataset.py.backup  images_to_video.py  prepare_flir.py  prepare_kaist.py
scripts/deploy/: convert_to_rknn.py  export_model.py  prepare_deploy.py  test_rknn.py
scripts/evaluate/: compare_trackers.py  eval_detection.py  eval_lightweight_score.py  eval_model_efficiency.py  eval_tracking.py  plot_deployment_selection.py  plot_eval_summary.py  plot_model_efficiency.py  plot_tracking_algorithm_comparison.py  plot_tracking_model_comparison.py  plot_tracking_mot_dashboard.py  summarize_stage1_with_params.py  system_test.py
scripts/train/: ablation_study.py  run_missing_ablation_autodl.py  train_ablation.py  train_yolov5.py  train_yolov5_optimized.py
src/: __init__.py
src/deploy/: __init__.py  convert_rknn.py  export_onnx.py  quantize.py
src/detection/: __init__.py  data_augment.py  detector.py  yolov5_detector.py  yolov5_loss_adapter.py
src/evaluation/: __init__.py  detection_eval.py  metrics_calculator.py  tracking_eval.py
src/tracking/: __init__.py  bytetrack_tracker.py  centertrack_tracker.py  deepsort_tracker.py  kalman_filter.py  tracker.py  unified_tracker.py
src/utils/: __init__.py  logger.py  metrics.py  visualization.py
tests/: test_detection.py  test_tracking.py  test_utils.py
yolov5/: export.py  train.py
yolov5/models/: common.py  experimental.py  yolo.py
yolov5/utils/: loss.py  metrics.py
(+4 files in other folders)
